<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A7FFEB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.teamandroidangel.iamangelauditor.courtcounter.MainActivity">

            <TextView
                android:id="@+id/teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/team_a"
                android:textAlignment="center"
                android:textColor="#1A237E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/_0"
                android:textColor="#E91E63"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/threePoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#1DE9B6"
                android:onClick="addThreeForTeamA"
                android:text="@string/_3_points"
                android:textColor="#1A237E" />

            <Button
                android:id="@+id/twoPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#1DE9B6"
                android:onClick="addTwoForTeamA"
                android:text="@string/_2_points"
                android:textColor="#1A237E" />

            <Button
                android:id="@+id/freeThrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#1DE9B6"
                android:onClick="addOneForTeamA"
                android:text="@string/free_throw"
                android:textColor="#1A237E" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:background="#F50057" />

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.teamandroidangel.iamangelauditor.courtcounter.MainActivity">

            <TextView
                android:id="@+id/teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/team_b"
                android:textAlignment="center"
                android:textColor="#1A237E"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/_0b"
                android:textColor="#E91E63"
                android:textSize="60sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/threePointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#1DE9B6"
                android:onClick="addThreeForTeamB"
                android:text="@string/_3_pointsb"
                android:textColor="#1A237E" />

            <Button
                android:id="@+id/twoPointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#1DE9B6"
                android:onClick="addTwoForTeamB"
                android:text="@string/_2_pointsB"
                android:textColor="#1A237E" />

            <Button
                android:id="@+id/freeThrowB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#1DE9B6"
                android:onClick="addOneForTeamB"
                android:text="@string/free_throwB"
                android:textColor="#1A237E" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="#4CAF50"
        android:onClick="resetScore"
        android:text="@string/reset"/>
</RelativeLayout>